--- a/index.css
+++ b/index.css
@@ -109,21 +109,18 @@ footer hr {
 
 /* 列表 */
 .card-list {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 0 -8px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 16px 12px;
 }
 .card {
   width: 100%;
   height: auto;
   aspect-ratio: 4 / 3;
   position: relative;
-  flex: 1;
   background-color: gainsboro;
   border-radius: 8px;
   overflow: hidden;
-  margin: 0 8px 12px;
   color: white;
 }
 .card img {
